RESOLVED FIXED87111
[V8] Pass Isolate to throwTypeError()
https://bugs.webkit.org/show_bug.cgi?id=87111
Summary [V8] Pass Isolate to throwTypeError()
Kentaro Hara
Reported 2012-05-22 03:35:39 PDT
The objective is to pass Isolate around in V8 bindings. In this bug we pass Isolate to throwTypeError() in custom bindings.
Attachments
Patch (18.39 KB, patch)
2012-05-22 03:38 PDT, Kentaro Hara
no flags
Patch (28.78 KB, patch)
2012-05-22 03:46 PDT, Kentaro Hara
no flags
Kentaro Hara
Comment 1 2012-05-22 03:38:10 PDT
Kentaro Hara
Comment 2 2012-05-22 03:46:16 PDT
WebKit Review Bot
Comment 3 2012-05-22 15:46:31 PDT
Comment on attachment 143255 [details] Patch Clearing flags on attachment: 143255 Committed r118071: <http://trac.webkit.org/changeset/118071>
WebKit Review Bot
Comment 4 2012-05-22 15:46:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.